kubernetes/springboot-petclinic-v1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot-petclinic
  labels:
    istio-injection: enabled
