kubernetes/springboot-petclinic-v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springboot-petclinic-v1
  name: springboot-petclinic-v1
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: springboot-petclinic-v1
